Fixed z-index

--- a/less/blocks/portfolio.less
+++ b/less/blocks/portfolio.less
@@ -69,7 +69,7 @@
 
   background-color: #826550;
 
-  z-index: 20;
+  z-index: 3;
 }
 
 .portfolio__item--work-of-month {
@@ -88,7 +88,7 @@
   display: block;
   margin: 0 auto 25px;
 
-  z-index: 10;
+  z-index: 2;
 }
 
 .portfolio__item_name {
